--- a/app/src/main/res/layout/fragment_main.xml
+++ b/app/src/main/res/layout/fragment_main.xml
@@ -4,32 +4,48 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
+    android:background="#BED5D5"
     tools:context=".fragments.bottom.MainFragment">
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent">
 
+        <androidx.appcompat.widget.AppCompatButton
+            android:id="@+id/sorted"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textAllCaps="false"
+            android:textSize="16sp"
+            android:layout_marginStart="@dimen/margin_16dp"
+            android:background="@null"
+            android:drawableLeft="@android:drawable/ic_menu_sort_by_size"
+            android:text=" по цене ⇩"
+            android:textColor="@color/black"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
+
         <ProgressBar
             android:id="@+id/progress_bar"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:adjustViewBounds="true"
-            android:scaleType="fitStart"
             android:outlineSpotShadowColor="@color/black"
-            tools:src="@drawable/logo_blue"
+            android:scaleType="fitStart"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent"/>
+            app:layout_constraintTop_toBottomOf="@id/sorted"
+            tools:src="@drawable/logo_blue" />
 
         <androidx.recyclerview.widget.RecyclerView
             android:id="@+id/recycler_flowers_on_main"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:background="@color/titleColor"
-            app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
-            tools:spanCount="2"
             android:orientation="vertical"
-            tools:listitem="@layout/main_flowers_item" />
+            app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
+            app:layout_constraintTop_toBottomOf="@+id/sorted"
+            tools:listitem="@layout/main_flowers_item"
+            tools:spanCount="2" />
 
         <androidx.appcompat.widget.AppCompatButton
             android:id="@+id/add_flower"
