--- a/app/src/main/res/layout/fragment_hit.xml
+++ b/app/src/main/res/layout/fragment_hit.xml
@@ -11,5 +11,6 @@
         android:layout_height="match_parent"
         android:background="@color/titleColor"
         android:orientation="vertical"
+        tools:spanCount="2"
         tools:listitem="@layout/main_flowers_item" />
 </FrameLayout>
