--- a/app/src/main/res/layout/main_flowers_item.xml
+++ b/app/src/main/res/layout/main_flowers_item.xml
@@ -1,9 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
-    xmlns:tools="http://schemas.android.com/tools"
     android:layout_margin="@dimen/margin_12dp"
     android:background="@color/mainBgColor"
     app:cardCornerRadius="15dp">
@@ -23,13 +23,62 @@
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent">
 
-            <androidx.appcompat.widget.AppCompatImageView
-                android:id="@+id/image"
+            <androidx.constraintlayout.widget.ConstraintLayout
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:adjustViewBounds="true"
-                android:scaleType="fitStart"
-                tools:src="@drawable/logo_blue"/>
+                android:layout_height="match_parent">
+
+                <androidx.appcompat.widget.AppCompatImageView
+                    android:id="@+id/image"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:adjustViewBounds="true"
+                    android:scaleType="fitStart"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toTopOf="parent"
+                    tools:src="@drawable/logo_blue" />
+
+                <androidx.appcompat.widget.AppCompatCheckBox
+                    android:id="@+id/checkbox"
+                    android:layout_width="40dp"
+                    android:layout_height="40dp"
+                    app:layout_constraintTop_toTopOf="parent"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    android:button="@null"
+                    android:drawableLeft="@drawable/selector_heart"/>
+
+                <androidx.appcompat.widget.AppCompatTextView
+                    android:id="@+id/hit"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginStart="@dimen/margin_8dp"
+                    android:layout_marginBottom="@dimen/margin_4dp"
+                    android:background="@drawable/hit_style"
+                    android:fontFamily="@font/lobster"
+                    android:paddingStart="@dimen/padding_4dp"
+                    android:paddingEnd="@dimen/padding_4dp"
+                    android:textAllCaps="false"
+                    android:text="Хит продаж"
+                    android:textColor="@color/black"
+                    android:visibility="gone"
+                    app:layout_constraintBottom_toBottomOf="parent"
+                    app:layout_constraintStart_toStartOf="parent" />
+
+                <androidx.appcompat.widget.AppCompatTextView
+                    android:id="@+id/have"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginBottom="@dimen/margin_4dp"
+                    android:layout_marginStart="@dimen/margin_8dp"
+                    android:background="@drawable/have_style"
+                    android:fontFamily="@font/lobster"
+                    android:paddingStart="@dimen/padding_4dp"
+                    android:paddingEnd="@dimen/padding_4dp"
+                    android:text="В наличии"
+                    android:textColor="@color/black"
+                    android:visibility="gone"
+                    app:layout_constraintBottom_toTopOf="@+id/hit"
+                    app:layout_constraintStart_toStartOf="parent" />
+            </androidx.constraintlayout.widget.ConstraintLayout>
         </androidx.cardview.widget.CardView>
 
         <androidx.appcompat.widget.AppCompatTextView
@@ -39,11 +88,11 @@
             android:layout_marginTop="@dimen/margin_4dp"
             android:fontFamily="@font/lobster"
             android:paddingStart="@dimen/padding_12dp"
-            tools:text="69 BYN"
             android:textColor="@color/black"
             app:layout_constraintEnd_toStartOf="@+id/cost"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/card_image" />
+            app:layout_constraintTop_toBottomOf="@id/card_image"
+            tools:text="69 BYN" />
 
         <androidx.appcompat.widget.AppCompatTextView
             android:id="@+id/articul"
@@ -51,11 +100,11 @@
             android:layout_height="wrap_content"
             android:layout_marginTop="@dimen/margin_4dp"
             android:paddingStart="@dimen/padding_12dp"
-            tools:text="69 BYN"
             android:textColor="@color/black"
             android:textSize="8dp"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/name" />
+            app:layout_constraintTop_toBottomOf="@id/name"
+            tools:text="69 BYN" />
 
         <androidx.appcompat.widget.AppCompatTextView
             android:id="@+id/cost"
@@ -63,10 +112,10 @@
             android:layout_height="wrap_content"
             android:fontFamily="@font/lobster"
             android:paddingEnd="@dimen/padding_12dp"
-            tools:text="69 BYN"
             android:textColor="@color/black"
             app:layout_constraintBottom_toBottomOf="@+id/name"
             app:layout_constraintEnd_toEndOf="@+id/card_image"
-            app:layout_constraintTop_toTopOf="@+id/name" />
+            app:layout_constraintTop_toTopOf="@+id/name"
+            tools:text="69 BYN" />
     </androidx.constraintlayout.widget.ConstraintLayout>
 </androidx.cardview.widget.CardView>
