second finish height in AboutFlowerActivity.kt align

--- a/app/src/main/res/layout/fragment_add_flower.xml
+++ b/app/src/main/res/layout/fragment_add_flower.xml
@@ -16,6 +16,8 @@
             android:id="@+id/flower_articul"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:inputType="text"
+            android:nextFocusForward="@id/flower_name"
             android:hint="Артикул"
             android:textSize="20sp"
             app:layout_constraintStart_toStartOf="parent"
@@ -44,6 +46,7 @@
             android:id="@+id/flower_about"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:nextFocusForward="@id/radioGroup"
             android:hint="Описание"
             android:textSize="20sp"
             app:layout_constraintStart_toStartOf="parent"
