--- a/app/src/main/res/layout/activity_about_flower.xml
+++ b/app/src/main/res/layout/activity_about_flower.xml
@@ -21,7 +21,7 @@
             <androidx.viewpager2.widget.ViewPager2
                 android:id="@+id/viewPager2"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
+                android:layout_height="0dp"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent"/>
 
