--- a/app/src/main/res/layout/item.xml
+++ b/app/src/main/res/layout/item.xml
@@ -7,10 +7,9 @@
     <!-- image viwer to view the images -->
     <androidx.appcompat.widget.AppCompatImageView
         android:id="@+id/imageViewMain"
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:adjustViewBounds="true"
         android:scaleType="fitCenter"
         tools:src="@drawable/logo_blue" />
-
 </LinearLayout>
