--- a/app/src/main/res/layout/fragment_contacts.xml
+++ b/app/src/main/res/layout/fragment_contacts.xml
@@ -64,7 +64,7 @@
         app:layout_constraintStart_toStartOf="@+id/button_call"
         app:layout_constraintTop_toBottomOf="@+id/button_instagram" />
 
-    <androidx.appcompat.widget.AppCompatButton
+    <!--<androidx.appcompat.widget.AppCompatButton
         android:id="@+id/button_slivki"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
@@ -77,7 +77,7 @@
         android:textColor="@color/black"
         android:textSize="20sp"
         app:layout_constraintStart_toStartOf="@+id/button_call"
-        app:layout_constraintTop_toBottomOf="@+id/button_web" />
+        app:layout_constraintTop_toBottomOf="@+id/button_web" />-->
 
     <androidx.appcompat.widget.AppCompatTextView
         android:id="@+id/appCompatTextView4"
