--- a/app/src/main/res/layout/fragment_main.xml
+++ b/app/src/main/res/layout/fragment_main.xml
@@ -15,6 +15,7 @@
             style="@style/Widget.Material3.CardView.Elevated"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            app:cardElevation="@dimen/margin_4dp"
             android:layout_marginHorizontal="@dimen/margin_4dp"
             app:layout_constraintTop_toTopOf="parent">
 
